# cpp-owl-common

./: .gitignore  CMakeLists.txt  INSTALL  Makefile  README.md  owl.pc.cmake
docs/: Doxyfile
include/: CMakeLists.txt  aggregator_solver_protocol.hpp  grail_types.hpp  message_receiver.hpp  netbuffer.hpp  sample_data.hpp  sensor_aggregator_protocol.hpp  simple_sockets.hpp  temporarily_unavailable.hpp  world_model_protocol.hpp
src/: CMakeLists.txt  aggregator_solver_protocol.cpp  grail_types.cpp  message_receiver.cpp  netbuffer.cpp  sample_data.cpp  sensor_aggregator_protocol.cpp  simple_sockets.cpp  world_model_protocol.cpp
